完成了数据同步，修复了柱状图显示的bug